--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -76,7 +77,7 @@
 
 @layer base {
   * {
-    @apply border-border ;
+    @apply border ;
   }
   body {
     @apply bg-background text-foreground;
